test/fail/pageastemplate.app
//Warning: Shouldn't use page as template: home2 at

application test

section datamodel

  
  define page home(){
    "1"
    home2()
  }
  
  define page home2(){
    "2"
  }